# invoice-intake-assignment-v1

./: .gitignore  README.md  main.py  pyproject.toml
.ipynb_checkpoints/: main-checkpoint.py  pyproject-checkpoint.toml
data/: Email.json
invoice_agent/: agent.py  schemas.py
invoice_agent/tools/: extract_invoice.py  notify.py
output/: outbound_email.json  outbound_email.txt
