[project]
name = "invoice-intake-agent-v1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "openai>=2.24.0",
    "pdf2image>=1.17.0",
    "pillow>=12.1.1",
    "pydantic>=2.12.5",
    "pypdf>=6.7.4",
    "python-dotenv>=1.2.2",
]
